Menu 테스트 코드 추가

--- a/test/test.any.html
+++ b/test/test.any.html
@@ -4,13 +4,15 @@
   <title>Mocha</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <rel rel="stylesheet" href="../node_modules/mocha/mocha.css"/>
+  <link rel="stylesheet" href="../node_modules/mocha/mocha.css">
+  <link rel="stylesheet" href="../dist/css/any.css">
 </head>
 <body>
 <div id="mocha"></div>
 <script src="../node_modules/should/should.js"></script>
 <script src="../node_modules/mocha/mocha.js"></script>
 <script src="../src/js/any.js"></script>
+<script src="../src/js/any.ui.js"></script>
 <script>mocha.setup('bdd')</script>
 <script src="test.any.js"></script>
 <script>mocha.run();</script>
